--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
    <html>
       <body>
-          <h1>
-Haftalık Key 80TL
-Aylık Key 150TL
-Sınırsız Key 300TL
-Ödeme Yöntemleri : Papapara, İninal, Banka(iban)</h1>
+          
+<h1>Haftalık Key 80TL<h1>
+</h2>Aylık Key 150TL</h2>
+</h3>Sınırsız Key 300TL</h3>
+</h4>Ödeme Yöntemleri : Papapara, İninal, Banka(iban)</h4>
       </body>
    </html> 
