--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
    <html>
       <body>
           
-<h1>Haftalık Key 80TL<h1>
-</h2>Aylık Key 150TL</h2>
-</h3>Sınırsız Key 300TL</h3>
-</h4>Ödeme Yöntemleri : Papapara, İninal, Banka(iban)</h4>
+<h1>Titan Network Fiyat Listesi<h1>
+<p>Haftalık Vip 180TL<p>
+<p>Aylık Vip 150TL<p>
+<p>Sınırsız Vip 300TL<p>
+<p>Ödeme Yöntemleri : Papapara, İninal, Banka(iban)<p>
+<p>Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz<p>
       </body>
    </html> 
