--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
       <body>
           
 <h1>Titan Network Fiyat Listesi<h1>
-<p>Haftalık Vip 180TL<p>
-<p>Aylık Vip 150TL<p>
-<p>Sınırsız Vip 300TL<p>
-<p>Ödeme Yöntemleri : Papapara, İninal, Banka(iban)<p>
-<p>Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz<p>
+<p>Haftalık Vip 180TL
+Aylık Vip 150TL
+Sınırsız Vip 300TL
+Ödeme Yöntemleri : Papapara, İninal, Banka(iban)
+Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz<p>
       </body>
    </html> 
