--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
       <body>
           
 <h1>Titan Network Fiyat Listesi<h1>
-<p>Haftalık Vip 180TL
-Aylık Vip 150TL
-Sınırsız Vip 300TL
-Ödeme Yöntemleri : Papapara, İninal, Banka(iban)
-Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz<p>
+<p>Haftalık Vip 180TL</pre>
+</pre>Aylık Vip 150TL</pre>
+</pre>Sınırsız Vip 300TL</pre>
+</pre>Ödeme Yöntemleri : Papapara, İninal, Banka(iban)</pre>
+</pre>Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz</pre>
       </body>
    </html> 
+<body bgcolor=000000>
+   <body text=808080>
+
