--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
       <body>
           
 <h1>Titan Network Fiyat Listesi<h1>
-<p>Haftalık Vip 180TL</pre>
-</pre>Aylık Vip 150TL</pre>
-</pre>Sınırsız Vip 300TL</pre>
-</pre>Ödeme Yöntemleri : Papapara, İninal, Banka(iban)</pre>
-</pre>Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz</pre>
+Haftalık Vip 180TL
+Aylık Vip 150TL
+Sınırsız Vip 300TL
+Ödeme Yöntemleri : Papapara, İninal, Banka(iban)
+Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz
       </body>
    </html> 
 <body bgcolor=000000>
