--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
       <body>
           
 <h1>Titan Network Fiyat Listesi<h1>
-Haftalık Vip 180TL
-Aylık Vip 150TL
-Sınırsız Vip 300TL
-Ödeme Yöntemleri : Papapara, İninal, Banka(iban)
-Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz
+<br> Haftalık Vip 180TL<br> 
+<br> Aylık Vip 150TL<br> 
+<br> Sınırsız Vip 300TL<br> 
+<br> Ödeme Yöntemleri : Papapara, İninal, Banka(iban)<br> 
+<br> Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz<br> 
       </body>
    </html> 
 <body bgcolor=000000>
