--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <br> Sınırsız Vip 300TL<br> 
 <br> Ödeme Yöntemleri : Papapara, İninal, Banka(iban)<br> 
 <br> Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz<br> 
+   <img src="https://cdn.discordapp.com/attachments/1057556020026679296/1062107022847381564/giphy.gif"
       </body>
    </html> 
 <body bgcolor=000000>
