--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <br> Haftalık Vip 50TL<br> 
 <br> Aylık Vip 100TL<br> 
 <br> Sınırsız Vip 200TL<br> 
+<br> Bayilik 400TL<br> 
+<br> Admin 550TL<br> 
 <br> Ödeme Yöntemleri : Papapara, İninal, Banka(iban)<br> 
 <br> Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz<br> 
    <img src="https://cdn.discordapp.com/attachments/1057556020026679296/1062107022847381564/giphy.gif"
