--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br> Admin 550TL<br> 
 <br> Ödeme Yöntemleri : Papapara, İninal, Banka(iban)<br> 
 <br> Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz<br> 
-   <img src="https://cdn.discordapp.com/attachments/1057556020026679296/1062107022847381564/giphy.gif"
+   <img src="https://cdn.discordapp.com/attachments/1053608523667357768/1060958731229212753/titan_ylbasi.png"
       </body>
    </html> 
 <body bgcolor=000000>
