--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
    <html>
       <body>
           
-<h1>Titan Network Fiyat Listesi<h1>
+<h1>Titan Check Fiyat Listesi<h1>
 <br> Haftalık Vip 50TL<br> 
 <br> Aylık Vip 100TL<br> 
 <br> Sınırsız Vip 200TL<br> 
