--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
       <body>
           
 <h1>Titan Check Fiyat Listesi<h1>
-<br> Haftalık Vip 50TL<br> 
-<br> Aylık Vip 100TL<br> 
-<br> Sınırsız Vip 200TL<br> 
+<br> Haftalık 50TL<br> 
+<br> Aylık 100TL<br> 
+<br> Sınırsız 200TL<br> 
 <br> Bayilik 400TL<br> 
 <br> Admin 550TL<br> 
 <br> Ödeme Yöntemleri : Papapara, İninal, Banka(iban)<br> 
