--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <br> Sınırsız 200TL<br> 
 <br> Bayilik 400TL<br> 
 <br> Admin 550TL<br> 
-<br> Ödeme Yöntemleri : Papapara, İninal, Banka(iban)<br> 
-<br> Almak İçin Sunucuda Sağda Aktif Olan Birisine Yazabilirsiniz<br> 
+<br> Ödeme Yöntemleri : Papara, İninal, Banka(iban)<br> 
+<br> Almak İçin Sunucuda #ticket Kanalından Ticket Açabilirsin<br> 
       </body>
    </html> 
 <body bgcolor=000000>
